# aurorality

./: .brisk.toml  .gitignore  AGENTS.md  Cargo.toml  Package.swift  README.md  ROADMAP.md
.agents/skills/aurorality/: SKILL.md
.agents/skills/aurorality/agents/: openai.yaml
.claude/: ecc-tools.json  identity.json
.claude/homunculus/instincts/inherited/: aurorality-instincts.yaml
.codex/: AGENTS.md
.github/workflows/: release.yml
crates/aurorality-cli/: Cargo.toml
crates/aurorality-cli/src/: bindgen.rs  build_swift.rs  bundle.rs  dev_loop.rs  dev_server.rs  main.rs  scaffold.rs  swiftgen.rs  swiftgen_style.rs
crates/aurorality-core/: Cargo.toml
crates/aurorality-core/src/: bridge.rs  color.rs  lib.rs  mutations.rs  plugins.rs  render.rs  store.rs  text.rs
crates/aurorality-core/src/js/: mod.rs  plugin.rs  runtime.rs
crates/aurorality-core/src/transport/: matrix.rs  mod.rs  stalwart.rs
crates/aurorality-core/tests/: stalwart_integration.rs
crates/aurorality-macros/: Cargo.toml
crates/aurorality-macros/src/: lib.rs
examples/basic/: .brisk.toml  Package.swift  run.sh
examples/basic/Sources/: App.swift  BasicSessionPlugin.swift
examples/basic/scripts/: backend.js
examples/basic/views/: main.crepus
examples/counter/: .brisk.toml  Package.swift
examples/counter/Sources/: App.swift  CounterPlugin.swift
examples/counter/scripts/: aurorality-lite.js  backend.js
examples/counter/views/: main.crepus
examples/hyperchat/: .brisk.toml  Package.swift  README.md  run.sh
examples/hyperchat/.brisk-sources/: App.swift  AurorApp.swift  AurorState.swift  AurorView.swift  GlassEffect.swift  HotReloadClient.swift  HyperChatGeneratedView.swift  HyperChatModel.swift  IR.swift  TransportStatus.swift  TransportTypes.swift  aurorality_core.swift  aurorality_coreFFI.h  hyperchat_backend.swift  module.modulemap
examples/hyperchat/.brisk-sources/FFI/: hyperchat_backendFFI.h
examples/hyperchat/FFI/: hyperchat_backendFFI.h  module.modulemap
examples/hyperchat/Sources/: App.swift  ChatStorePlugin.swift  HyperChatContext.swift  HyperChatDevConnectView.swift  HyperChatModel.swift  HyperChatRootView.swift
examples/hyperchat/Tests/HyperChatTests/: HyperChatModelTests.swift
examples/hyperchat/rust-backend/: Cargo.toml
examples/hyperchat/rust-backend/benches/: matrix_bench.rs
examples/hyperchat/rust-backend/src/: lib.rs  matrix.rs  matrix_session.rs  stalwart.rs  transport_types.rs
examples/hyperchat/scripts/: backend.js
examples/hyperchat/views/: main.crepus  main.json
examples/textanalyzer/: .brisk.toml  Package.swift  run.sh
examples/textanalyzer/Sources/: App.swift  HistoryPlugin.swift
examples/textanalyzer/scripts/: backend.js
examples/textanalyzer/views/: main.crepus
runner/: .brisk.toml  Package.swift
runner/Sources/: ConnectView.swift  RunnerApp.swift
scripts/: sync-uniffi.sh
swift/Sources/Aurorality/: AurorBridge.swift  AurorDevOverlay.swift  AurorJsPlugin.swift  AurorPlugin.swift  AurorState.swift  AurorView.swift  HotReloadBus.swift  HotReloadClient.swift  HotReloadHUD.swift  IR.swift
swift/Tests/AuroralityTests/: AurorStateTests.swift  ContextValueTests.swift  LiquidGlassCompileTests.swift  ViewStyleTests.swift
