[workspace]
members = [
    "crates/aurorality-core",
    "crates/aurorality-macros",
    "crates/aurorality-cli",
    "examples/hyperchat/rust-backend",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Max Carter <max@undivisible.dev>"]
license = "ISC"
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uniffi = { version = "0.31", features = ["cli"] }
eqswift = "0.1.1"
ureq = { version = "2", features = ["json"] }
crepuscularity-native = "0.4.4"
crepuscularity-core = "0.4.9"
