[package]
name = "aurorality-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for aurorality: dev server, build, and project scaffolding"

[[bin]]
name = "aurorality"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
crepuscularity-native = { workspace = true }
crepuscularity-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify-debouncer-mini = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.23"
futures-util = "0.3"
anyhow = "1"
