[package]
name = "aurorality-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "CLI for aurorality: dev server, build, and project scaffolding"

[[bin]]
name = "aurorality"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
crepuscularity-native = { workspace = true }
crepuscularity-core = { workspace = true }
clap = { version = "4", features = ["derive"] }
notify = "8"
console = "0.16"
anyhow = "1"
toml = "0.9"
ctrlc = "3"
