[package]
name = "aurorality-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "SwiftUI + Rust shell for .crepus templates — core library and UniFFI exports"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[features]
# Enable the JavaScriptCore plugin backend (macOS/iOS only).
# Builds the `js` module which wraps JSC and exposes `js_load_plugin` via UniFFI.
js = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uniffi = { workspace = true }
eqswift = { workspace = true }
crepuscularity-native = { workspace = true }
crepuscularity-core = { workspace = true }
thiserror = "2"
ureq = { workspace = true }
